Support GCS and ADLS warehouses (#145)